--- a/composer.json
+++ b/composer.json
@@ -25,11 +25,11 @@
         "nunomaduro/larastan": "^1.0 || ^2.0",
         "orchestra/testbench": "^6.22",
         "pestphp/pest": "^1.21",
-        "pestphp/pest-plugin-parallel": "^1.0",
         "pestphp/pest-plugin-laravel": "^1.1",
+        "pestphp/pest-plugin-parallel": "^1.0",
         "spatie/laravel-ray": "^1.26",
-        "worksome/pest-plugin-silence": "^0.1",
-        "worksome/coding-style": "0.15.0"
+        "worksome/coding-style": "^1.1",
+        "worksome/pest-plugin-silence": "^0.1"
     },
     "autoload": {
         "psr-4": {
@@ -43,17 +43,11 @@
         }
     },
     "scripts": {
-        "lint": [
-            "vendor/bin/php-cs-fixer fix --ansi",
-            "vendor/bin/phpcbf"
-        ],
+        "lint": "vendor/bin/ecs --fix",
         "test:unit": "vendor/bin/pest -p",
         "test:coverage": "vendor/bin/pest -p --coverage",
         "test:types": "vendor/bin/phpstan analyse",
-        "test:style": [
-            "vendor/bin/php-cs-fixer fix --dry-run --ansi",
-            "vendor/bin/phpcs -n"
-        ],
+        "test:style": "vendor/bin/ecs",
         "test": [
             "@test:style",
             "@test:types",
