--- a/composer.json
+++ b/composer.json
@@ -16,20 +16,20 @@
         }
     ],
     "require": {
-        "php": "^8.1",
-        "spatie/laravel-package-tools": "^1.9.2",
-        "illuminate/contracts": "^8.73"
+        "php": "^8.2",
+        "spatie/laravel-package-tools": "^1.13.8",
+        "illuminate/contracts": "^9.46"
     },
     "require-dev": {
-        "nunomaduro/collision": "^5.10",
-        "nunomaduro/larastan": "^1.0 || ^2.0",
-        "orchestra/testbench": "^6.22",
-        "pestphp/pest": "^1.21",
-        "pestphp/pest-plugin-laravel": "^1.1",
-        "pestphp/pest-plugin-parallel": "^1.0",
-        "spatie/laravel-ray": "^1.26",
-        "worksome/coding-style": "^2.0",
-        "worksome/pest-plugin-silence": "^0.1"
+        "nunomaduro/collision": "^6.4",
+        "nunomaduro/larastan": "^2.3.4",
+        "orchestra/testbench": "^7.18",
+        "pestphp/pest": "^1.22.3",
+        "pestphp/pest-plugin-laravel": "^1.3",
+        "pestphp/pest-plugin-parallel": "^1.2",
+        "spatie/laravel-ray": "^1.31",
+        "worksome/coding-style": "^2.3.2",
+        "worksome/pest-plugin-silence": "^0.1.2"
     },
     "autoload": {
         "psr-4": {
@@ -43,6 +43,7 @@
         }
     },
     "scripts": {
+        "post-autoload-dump": "@php ./vendor/bin/testbench package:discover --ansi",
         "lint": "vendor/bin/ecs --fix",
         "test:unit": "vendor/bin/pest -p",
         "test:coverage": "vendor/bin/pest -p --coverage",
