--- a/composer.json
+++ b/composer.json
@@ -17,18 +17,16 @@
     ],
     "require": {
         "php": "^8.2",
-        "spatie/laravel-package-tools": "^1.14.1",
+        "spatie/laravel-package-tools": "^1.14.2",
         "illuminate/contracts": "^10.0"
     },
     "require-dev": {
-        "nunomaduro/collision": "^6.4",
+        "nunomaduro/collision": "^7.0",
         "nunomaduro/larastan": "^2.4.0",
         "orchestra/testbench": "^8.0",
-        "pestphp/pest": "^1.22.3",
-        "pestphp/pest-plugin-laravel": "^1.4",
-        "pestphp/pest-plugin-parallel": "^1.2",
-        "worksome/coding-style": "^2.3.2",
-        "worksome/pest-plugin-silence": "^0.1.2"
+        "pestphp/pest": "^2.0",
+        "pestphp/pest-plugin-laravel": "^2.0",
+        "worksome/coding-style": "^2.5"
     },
     "autoload": {
         "psr-4": {
