--- a/composer.json
+++ b/composer.json
@@ -17,16 +17,16 @@
     ],
     "require": {
         "php": "^8.2",
-        "spatie/laravel-package-tools": "^1.14.2",
-        "illuminate/contracts": "^10.0"
+        "spatie/laravel-package-tools": "^1.16",
+        "illuminate/contracts": "^10.0 || ^11.0"
     },
     "require-dev": {
-        "nunomaduro/collision": "^7.0",
-        "nunomaduro/larastan": "^2.4.0",
-        "orchestra/testbench": "^8.0",
-        "pestphp/pest": "^2.0",
-        "pestphp/pest-plugin-laravel": "^2.0",
-        "worksome/coding-style": "^2.5"
+        "nunomaduro/collision": "^7.0 || ^8.0",
+        "larastan/larastan": "^2.6",
+        "orchestra/testbench": "^8.21 || ^9.0",
+        "pestphp/pest": "^2.33",
+        "pestphp/pest-plugin-laravel": "^2.2",
+        "worksome/coding-style": "^2.8"
     },
     "autoload": {
         "psr-4": {
