--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -11,3 +11,8 @@ parameters:
     checkModelProperties: true
     parallel:
             processTimeout: 300.0
+
+    ignoreErrors:
+      -
+        identifier: larastan.noEnvCallsOutsideOfConfig
+        path: config
