--- a/composer.json
+++ b/composer.json
@@ -17,12 +17,12 @@
     ],
     "require": {
         "php": "^8.3",
-        "spatie/laravel-package-tools": "^1.19",
-        "illuminate/contracts": "^11.0 || ^12.0"
+        "illuminate/contracts": "^11.0 || ^12.0",
+        "spatie/laravel-package-tools": "^1.19"
     },
     "require-dev": {
-        "nunomaduro/collision": "^7.10 || ^8.1.1",
         "larastan/larastan": "^3.1",
+        "nunomaduro/collision": "^7.10 || ^8.1.1",
         "orchestra/testbench": "^9.12 || ^10.1",
         "pestphp/pest": "^3.7",
         "pestphp/pest-plugin-laravel": "^3.1",
