--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -44,4 +44,4 @@ jobs:
         run: composer update --prefer-dist --no-interaction --no-progress --ansi
 
       - name: Run ECS
-        run: composer test:lint
+        run: composer test:style
