--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,6 @@
 # Path-based git attributes
-# https://www.kernel.org/pub/software/scm/git/docs/gitattributes.html
+# https://git-scm.com/docs/gitattributes
+* text=auto
 
 # Ignore all test and documentation with "export-ignore".
 /.github            export-ignore
