--- a/composer.json
+++ b/composer.json
@@ -17,13 +17,13 @@
     ],
     "require": {
         "php": "^8.4",
-        "illuminate/contracts": "^11.0 || ^12.0",
+        "illuminate/contracts": "^12.0",
         "spatie/laravel-package-tools": "^1.92"
     },
     "require-dev": {
-        "larastan/larastan": "^3.7",
-        "nunomaduro/collision": "^7.12 || ^8.8.2",
-        "orchestra/testbench": "^9.15 || ^10.6",
+        "larastan/larastan": "^3.8",
+        "nunomaduro/collision": "^8.8.2",
+        "orchestra/testbench": "^10.6",
         "pestphp/pest": "^4.1",
         "pestphp/pest-plugin-laravel": "^4.0",
         "worksome/coding-style": "^3.3"
